--- a/eclass/ChangeLog
+++ b/eclass/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for eclass directory
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/eclass/ChangeLog,v 1.441 2012/10/13 22:54:37 johu Exp $
+# $Header: /var/cvsroot/gentoo-x86/eclass/ChangeLog,v 1.442 2012/10/14 10:51:28 mgorny Exp $
+
+  14 Oct 2012; Michał Górny <mgorny@gentoo.org> +python-r1.eclass:
+  Introduce python-r1, a new (and simpler) eclass for Python-related packages.
 
   13 Oct 2012; Johannes Huber <johu@gentoo.org> kde4-meta-pkg.eclass:
   Change LICENSE to 'metapackage' for kde meta packages, bug #438278.
