--- a/profiles/ChangeLog
+++ b/profiles/ChangeLog
@@ -1,10 +1,13 @@
 # ChangeLog for profile directory
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7029 2012/10/14 10:01:05 hwoarang Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7030 2012/10/14 10:57:18 mgorny Exp $
 #
 # This ChangeLog should include records for all changes in profiles directory.
 # Only typo fixes which don't affect portage/repoman behaviour could be avoided
 # here. If in doubt put a record here!
+
+  14 Oct 2012; Michał Górny <mgorny@gentoo.org> base/package.use.force:
+  Force-enable all Python implementations for python-exec.
 
   14 Oct 2012; Markos Chandras <hwoarang@gentoo.org>
   -default/linux/amd64/10.0/server/profile.bashrc:
