--- a/eclass/ChangeLog
+++ b/eclass/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for eclass directory
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/eclass/ChangeLog,v 1.442 2012/10/14 10:51:28 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/eclass/ChangeLog,v 1.443 2012/10/14 10:58:03 mgorny Exp $
+
+  14 Oct 2012; Michał Górny <mgorny@gentoo.org> +distutils-r1.eclass:
+  Introduce distutils-r1, a new (and simpler) eclass for Python packages using
+  distutils build system.
 
   14 Oct 2012; Michał Górny <mgorny@gentoo.org> +python-r1.eclass:
   Introduce python-r1, a new (and simpler) eclass for Python-related packages.
