--- a/dev-tcltk/tkXwin/ChangeLog
+++ b/dev-tcltk/tkXwin/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for dev-tcltk/tkXwin
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-tcltk/tkXwin/ChangeLog,v 1.26 2012/06/07 20:43:26 zmedico Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-tcltk/tkXwin/ChangeLog,v 1.27 2012/10/14 11:28:52 jlec Exp $
+
+*tkXwin-1.0-r3 (14 Oct 2012)
+
+  14 Oct 2012; Justin Lecher <jlec@gentoo.org> tkXwin-1.0-r1.ebuild,
+  tkXwin-1.0-r2.ebuild, +tkXwin-1.0-r3.ebuild,
+  +files/tkXwin-1.0-configure.patch:
+  Add missing dep on x11-libs/libXScrnSaver, #438308; respect CFLAGS, #438310
 
   07 Jun 2012; Zac Medico <zmedico@gentoo.org> tkXwin-1.0-r1.ebuild,
   tkXwin-1.0-r2.ebuild:
