--- a/x11-libs/gtksourceview/ChangeLog
+++ b/x11-libs/gtksourceview/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-libs/gtksourceview
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/gtksourceview/ChangeLog,v 1.231 2012/10/06 09:58:22 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/gtksourceview/ChangeLog,v 1.232 2012/10/14 13:15:00 blueness Exp $
+
+  14 Oct 2012; Anthony G. Basile <blueness@gentoo.org>
+  gtksourceview-3.4.2.ebuild:
+  stable ppc64, bug #427544
 
   06 Oct 2012; Markus Meier <maekke@gentoo.org> gtksourceview-3.4.2.ebuild:
   arm stable, bug #427544
