--- a/media-fonts/source-sans-pro/ChangeLog
+++ b/media-fonts/source-sans-pro/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for media-fonts/source-sans-pro
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-fonts/source-sans-pro/ChangeLog,v 1.4 2012/08/12 14:37:12 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-fonts/source-sans-pro/ChangeLog,v 1.5 2012/10/14 13:49:03 zx2c4 Exp $
+
+*source-sans-pro-1.036 (14 Oct 2012)
+
+  14 Oct 2012; Jason A. Donenfeld <zx2c4@gentoo.org>
+  +source-sans-pro-1.036.ebuild, -source-sans-pro-1.033.ebuild:
+  Bump to latest version from Adobe.
 
   12 Aug 2012; Samuli Suominen <ssuominen@gentoo.org>
   -source-sans-pro-2012.07.31.ebuild:
