--- a/dev-tcltk/tkXwin/ChangeLog
+++ b/dev-tcltk/tkXwin/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-tcltk/tkXwin
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-tcltk/tkXwin/ChangeLog,v 1.27 2012/10/14 11:28:52 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-tcltk/tkXwin/ChangeLog,v 1.28 2012/10/14 14:28:17 jlec Exp $
+
+  14 Oct 2012; Justin Lecher <jlec@gentoo.org> tkXwin-1.0-r3.ebuild:
+  Export AR and RANLIB as well, thanks Vicente Olivert Riera
 
 *tkXwin-1.0-r3 (14 Oct 2012)
 
