--- a/sys-apps/dbus/ChangeLog
+++ b/sys-apps/dbus/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-apps/dbus
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/dbus/ChangeLog,v 1.361 2012/10/14 05:11:55 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/dbus/ChangeLog,v 1.362 2012/10/14 14:38:52 armin76 Exp $
+
+  14 Oct 2012; Raúl Porcel <armin76@gentoo.org> dbus-1.6.8.ebuild:
+  ia64/s390/sh/sparc stable wrt #416725
 
   14 Oct 2012; Anthony G. Basile <blueness@gentoo.org> dbus-1.6.8.ebuild:
   stable ppc ppc64, bug #436028
