--- a/dev-libs/glib/ChangeLog
+++ b/dev-libs/glib/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/glib
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/glib/ChangeLog,v 1.545 2012/10/14 05:36:25 mattst88 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/glib/ChangeLog,v 1.546 2012/10/14 14:53:14 armin76 Exp $
+
+  14 Oct 2012; Raúl Porcel <armin76@gentoo.org> glib-2.32.4-r1.ebuild:
+  ia64/m68k/s390/sh/sparc stable wrt #436028
 
   14 Oct 2012; Matt Turner <mattst88@gentoo.org> glib-2.32.4-r1.ebuild:
   Stable on alpha, bug 436028.
