--- a/dev-libs/dbus-glib/ChangeLog
+++ b/dev-libs/dbus-glib/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/dbus-glib
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/dbus-glib/ChangeLog,v 1.109 2012/10/14 05:04:03 mattst88 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/dbus-glib/ChangeLog,v 1.110 2012/10/14 14:58:21 armin76 Exp $
+
+  14 Oct 2012; Raúl Porcel <armin76@gentoo.org> dbus-glib-0.100.ebuild:
+  ia64/m68k/s390/sh/sparc stable wrt #416725
 
   14 Oct 2012; Matt Turner <mattst88@gentoo.org> dbus-glib-0.100-r1.ebuild:
   Stable on alpha, bug 416725.
