--- a/dev-python/dbus-python/ChangeLog
+++ b/dev-python/dbus-python/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/dbus-python
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/dbus-python/ChangeLog,v 1.106 2012/10/14 05:41:19 mattst88 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/dbus-python/ChangeLog,v 1.107 2012/10/14 15:00:19 armin76 Exp $
+
+  14 Oct 2012; Raúl Porcel <armin76@gentoo.org> dbus-python-1.1.1.ebuild:
+  ia64/m68k/s390/sh/sparc stable wrt #416725
 
   14 Oct 2012; Matt Turner <mattst88@gentoo.org> dbus-python-1.1.1.ebuild:
   Stable on alpha, bug 416725.
