--- a/media-fonts/source-sans-pro/ChangeLog
+++ b/media-fonts/source-sans-pro/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-fonts/source-sans-pro
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-fonts/source-sans-pro/ChangeLog,v 1.5 2012/10/14 13:49:03 zx2c4 Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-fonts/source-sans-pro/ChangeLog,v 1.6 2012/10/14 15:30:07 zx2c4 Exp $
+
+  14 Oct 2012; Jason A. Donenfeld <zx2c4@gentoo.org> metadata.xml:
+  Per nirbheek's suggestion, add self to maintainers list.
 
 *source-sans-pro-1.036 (14 Oct 2012)
 
