--- a/media-plugins/kipi-plugins/ChangeLog
+++ b/media-plugins/kipi-plugins/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for media-plugins/kipi-plugins
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/kipi-plugins/ChangeLog,v 1.130 2012/10/14 16:46:03 dilfridge Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/kipi-plugins/ChangeLog,v 1.131 2012/10/14 17:19:07 dilfridge Exp $
+
+  14 Oct 2012; Andreas K. Huettel <dilfridge@gentoo.org>
+  kipi-plugins-2.6.0-r1.ebuild, kipi-plugins-2.8.0.ebuild,
+  kipi-plugins-2.9.0.ebuild:
+  libmediawiki moved to net-libs
 
   14 Oct 2012; Andreas K. Huettel <dilfridge@gentoo.org>
   -files/kipi-plugins-1.7.0-expoblending.patch,
