--- a/eclass/ChangeLog
+++ b/eclass/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for eclass directory
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/eclass/ChangeLog,v 1.444 2012/10/14 12:19:32 pinkbyte Exp $
+# $Header: /var/cvsroot/gentoo-x86/eclass/ChangeLog,v 1.445 2012/10/14 18:18:20 alexxy Exp $
+
+  14 Oct 2012; Alexey Shvetsov <alexxy@gentoo.org> openib.eclass:
+  Add compat-rdma
 
   14 Oct 2012; Sergey Popov <pinkbyte@gentoo.org> leechcraft.eclass:
   Add compiler version checking for LeechCraft
