--- a/net-libs/qxmpp/ChangeLog
+++ b/net-libs/qxmpp/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-libs/qxmpp
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/qxmpp/ChangeLog,v 1.25 2012/10/14 18:10:36 pinkbyte Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/qxmpp/ChangeLog,v 1.26 2012/10/14 18:39:28 pinkbyte Exp $
+
+  14 Oct 2012; Sergey Popov <pinkbyte@gentoo.org> qxmpp-0.7.4.ebuild:
+  Add keyword ~amd64-linux
 
   14 Oct 2012; Sergey Popov <pinkbyte@gentoo.org> qxmpp-9999.ebuild:
   Add missing test USE-flag in live ebuild
