--- a/sys-fs/ncdu/ChangeLog
+++ b/sys-fs/ncdu/ChangeLog
@@ -1,9 +1,9 @@
 # ChangeLog for sys-fs/ncdu
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/ncdu/ChangeLog,v 1.35 2012/10/14 20:09:09 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/ncdu/ChangeLog,v 1.36 2012/10/14 20:11:12 maekke Exp $
 
   14 Oct 2012; Markus Meier <maekke@gentoo.org> ncdu-1.9.ebuild:
-  arm stable, bug #433651
+  add ~arm, bug #433651
 
   27 Sep 2012; Tim Harder <radhermit@gentoo.org> -ncdu-1.7.ebuild:
   Remove old.
