--- a/app-accessibility/at-spi2-core/ChangeLog
+++ b/app-accessibility/at-spi2-core/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-accessibility/at-spi2-core
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-accessibility/at-spi2-core/ChangeLog,v 1.16 2012/10/14 15:08:02 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-accessibility/at-spi2-core/ChangeLog,v 1.17 2012/10/14 20:20:15 blueness Exp $
+
+  14 Oct 2012; Anthony G. Basile <blueness@gentoo.org>
+  at-spi2-core-2.4.2.ebuild:
+  stable ppc64, bug #427544
 
   14 Oct 2012; Anthony G. Basile <blueness@gentoo.org>
   at-spi2-core-2.2.3.ebuild:
