--- a/app-portage/gentoopm/ChangeLog
+++ b/app-portage/gentoopm/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for app-portage/gentoopm
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-portage/gentoopm/ChangeLog,v 1.25 2012/10/05 21:12:57 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-portage/gentoopm/ChangeLog,v 1.26 2012/10/14 22:21:57 ferringb Exp $
+
+*gentoopm-0.2.5-r2 (14 Oct 2012)
+
+  14 Oct 2012; Brian Harring <ferringb@gentoo.org> -gentoopm-0.2.5-r1.ebuild,
+  +gentoopm-0.2.5-r2.ebuild, +files/pkgcore-0.8.1-api.patch:
+  Restore pkgcore support, while removing daft blockers.  Bug #438392.
 
   05 Oct 2012; Michał Górny <mgorny@gentoo.org> gentoopm-0.2.5-r1.ebuild:
   Add a blocker on new pkgcore to avoid breakage.
