--- a/x11-libs/gtksourceview/ChangeLog
+++ b/x11-libs/gtksourceview/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-libs/gtksourceview
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/gtksourceview/ChangeLog,v 1.232 2012/10/14 13:15:00 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/gtksourceview/ChangeLog,v 1.233 2012/10/14 23:29:27 mattst88 Exp $
+
+  14 Oct 2012; Matt Turner <mattst88@gentoo.org> gtksourceview-3.4.2.ebuild:
+  Stable on alpha, bug 427544.
 
   14 Oct 2012; Anthony G. Basile <blueness@gentoo.org>
   gtksourceview-3.4.2.ebuild:
