--- a/sys-apps/portage/ChangeLog
+++ b/sys-apps/portage/ChangeLog
@@ -1,6 +1,14 @@
 # ChangeLog for sys-apps/portage
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1120 2012/10/13 04:04:04 zmedico Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1121 2012/10/15 00:21:13 zmedico Exp $
+
+*portage-2.1.11.27 (15 Oct 2012)
+
+  15 Oct 2012; Zac Medico <zmedico@gentoo.org> +portage-2.1.11.27.ebuild:
+  2.1.11.27 version bump. This fixes bug #437910 (QA_MULTILIB_PATHS variable for
+  FEATURES=multilib-strict), bug #438254 (distinguish binary packages in merge
+  display), and bug #438364 (repoman special git commit footer). Bug #431026
+  tracks all bugs fixed since portage-2.1.11.9.
 
   13 Oct 2012; Zac Medico <zmedico@gentoo.org> -portage-2.1.11.25.ebuild,
   -portage-2.2.0_alpha136.ebuild:
