--- a/sys-auth/polkit/ChangeLog
+++ b/sys-auth/polkit/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-auth/polkit
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-auth/polkit/ChangeLog,v 1.106 2012/10/09 22:14:44 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-auth/polkit/ChangeLog,v 1.107 2012/10/15 02:40:17 zmedico Exp $
+
+  15 Oct 2012; Zac Medico <zmedico@gentoo.org> polkit-0.107-r1.ebuild:
+  Set QA_MULTILIB_PATHS for bug #424423.
 
   09 Oct 2012; Jeroen Roovers <jer@gentoo.org> polkit-0.107-r1.ebuild:
   Marked ~hppa (bug #436668).
@@ -404,4 +407,3 @@
   +files/polkit-0.93-fix-daemon-name.patch, +polkit-0.94.ebuild,
   +metadata.xml:
   Initial ebuild for GNOME 2.28.
-
