--- a/media-libs/libraw/ChangeLog
+++ b/media-libs/libraw/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-libs/libraw
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libraw/ChangeLog,v 1.33 2012/10/15 07:01:44 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libraw/ChangeLog,v 1.34 2012/10/15 07:02:36 radhermit Exp $
+
+  15 Oct 2012; Tim Harder <radhermit@gentoo.org> -libraw-0.14.5.ebuild,
+  -libraw-0.14.6.ebuild:
+  Remove old.
 
 *libraw-0.15.0_beta1 (15 Oct 2012)
 
