--- a/media-libs/libraw/ChangeLog
+++ b/media-libs/libraw/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/libraw
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libraw/ChangeLog,v 1.34 2012/10/15 07:02:36 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libraw/ChangeLog,v 1.35 2012/10/15 07:09:27 radhermit Exp $
+
+  15 Oct 2012; Tim Harder <radhermit@gentoo.org> libraw-0.15.0_beta1.ebuild:
+  Add jpeg use flag.
 
   15 Oct 2012; Tim Harder <radhermit@gentoo.org> -libraw-0.14.5.ebuild,
   -libraw-0.14.6.ebuild:
