--- a/net-irc/hexchat/ChangeLog
+++ b/net-irc/hexchat/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-irc/hexchat
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-irc/hexchat/ChangeLog,v 1.8 2012/10/02 02:25:18 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-irc/hexchat/ChangeLog,v 1.9 2012/10/15 07:14:38 yngwin Exp $
+
+*hexchat-2.9.2 (15 Oct 2012)
+
+  15 Oct 2012; Ben de Groot <yngwin@gentoo.org> +hexchat-2.9.2.ebuild,
+  hexchat-2.9.1.ebuild:
+  Remove unneeded dep blocker. Version bump.
 
   02 Oct 2012; Anthony G. Basile <blueness@gentoo.org> hexchat-2.9.1.ebuild:
   keyword ~arm, bug #435872
