--- a/media-libs/sdl-terminal/ChangeLog
+++ b/media-libs/sdl-terminal/ChangeLog
@@ -1,6 +1,14 @@
 # ChangeLog for media-libs/sdl-terminal
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/sdl-terminal/ChangeLog,v 1.6 2012/04/22 01:07:30 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/sdl-terminal/ChangeLog,v 1.7 2012/10/15 08:07:09 pinkbyte Exp $
+
+*sdl-terminal-1.1.3-r1 (15 Oct 2012)
+
+  15 Oct 2012; Sergey Popov <pinkbyte@gentoo.org>
+  +sdl-terminal-1.1.3-r1.ebuild,
+  +files/sdl-terminal-1.1.3-python-libs-path.patch:
+  Revision bump: bump to EAPI 4, build static libs optionally, fix python libs
+  searching in configure phase
 
   22 Apr 2012; Michael Sterrett <mr_bones_@gentoo.org>
   sdl-terminal-1.1.3.ebuild:
