--- a/app-shells/ccsh/ChangeLog
+++ b/app-shells/ccsh/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-shells/ccsh
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-shells/ccsh/ChangeLog,v 1.13 2012/10/15 09:56:12 pinkbyte Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-shells/ccsh/ChangeLog,v 1.14 2012/10/15 09:58:47 pinkbyte Exp $
+
+  15 Oct 2012; Sergey Popov <pinkbyte@gentoo.org> metadata.xml:
+  Assign myself as maintainer
 
 *ccsh-0.0.4-r3 (15 Oct 2012)
 
