--- a/dev-libs/libdbusmenu-qt/ChangeLog
+++ b/dev-libs/libdbusmenu-qt/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/libdbusmenu-qt
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libdbusmenu-qt/ChangeLog,v 1.27 2012/05/22 16:36:38 kensington Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libdbusmenu-qt/ChangeLog,v 1.28 2012/10/15 10:05:44 ago Exp $
+
+  15 Oct 2012; Agostino Sarubbo <ago@gentoo.org> libdbusmenu-qt-0.9.2.ebuild:
+  Stable for amd64, wrt bug #436706
 
   22 May 2012; Michael Palimaka <kensington@gentoo.org>
   +files/libdbusmenu-qt-0.9.2-optionaltests.patch, libdbusmenu-qt-0.9.2.ebuild:
