--- a/dev-tcltk/tkXwin/ChangeLog
+++ b/dev-tcltk/tkXwin/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-tcltk/tkXwin
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-tcltk/tkXwin/ChangeLog,v 1.28 2012/10/14 14:28:17 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-tcltk/tkXwin/ChangeLog,v 1.29 2012/10/15 10:23:46 ago Exp $
+
+  15 Oct 2012; Agostino Sarubbo <ago@gentoo.org> tkXwin-1.0-r3.ebuild:
+  Stable for amd64, wrt bug #438322
 
   14 Oct 2012; Justin Lecher <jlec@gentoo.org> tkXwin-1.0-r3.ebuild:
   Export AR and RANLIB as well, thanks Vicente Olivert Riera
