--- a/dev-java/sun-jdk/ChangeLog
+++ b/dev-java/sun-jdk/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for dev-java/sun-jdk
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/sun-jdk/ChangeLog,v 1.336 2012/09/13 07:16:16 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/sun-jdk/ChangeLog,v 1.337 2012/10/15 10:23:42 sera Exp $
+
+  15 Oct 2012; Ralph Sennhauser <sera@gentoo.org> -sun-jdk-1.6.0.33.ebuild,
+  -sun-jdk-1.6.0.33-r1.ebuild, -sun-jdk-1.6.0.33-r2.ebuild,
+  -sun-jdk-1.6.0.34.ebuild:
+  Remove vulnarable.
 
   13 Sep 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> sun-jdk-1.6.0.35.ebuild:
   x86 stable wrt bug #433094
