--- a/dev-perl/Email-MIME/ChangeLog
+++ b/dev-perl/Email-MIME/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/Email-MIME
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Email-MIME/ChangeLog,v 1.63 2012/07/27 19:20:12 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Email-MIME/ChangeLog,v 1.64 2012/10/15 10:24:04 ago Exp $
+
+  15 Oct 2012; Agostino Sarubbo <ago@gentoo.org> Email-MIME-1.911.0.ebuild:
+  Stable for amd64, wrt bug #438294
 
 *Email-MIME-1.911.0 (27 Jul 2012)
 
