--- a/sci-libs/io_lib/ChangeLog
+++ b/sci-libs/io_lib/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sci-libs/io_lib
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-libs/io_lib/ChangeLog,v 1.21 2012/08/03 19:20:41 bicatali Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-libs/io_lib/ChangeLog,v 1.22 2012/10/15 12:08:51 ago Exp $
+
+  15 Oct 2012; Agostino Sarubbo <ago@gentoo.org> io_lib-1.10.1.ebuild:
+  Stable for amd64, wrt bug #436888
 
   03 Aug 2012; Sébastien Fabbro <bicatali@gentoo.org> io_lib-1.12.5.ebuild,
   metadata.xml:
