--- a/net-p2p/transmission/ChangeLog
+++ b/net-p2p/transmission/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for net-p2p/transmission
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-p2p/transmission/ChangeLog,v 1.210 2012/10/08 07:18:12 nativemad Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-p2p/transmission/ChangeLog,v 1.211 2012/10/15 13:14:48 ssuominen Exp $
+
+  15 Oct 2012; Samuli Suominen <ssuominen@gentoo.org>
+  -files/transmission-2.51-fbsd.patch, -transmission-2.52.ebuild,
+  -transmission-9999.ebuild:
+  old
 
   08 Oct 2012; Andreas Schuerch <nativemad@gentoo.org>
   transmission-2.61.ebuild:
