--- a/net-p2p/transmission/ChangeLog
+++ b/net-p2p/transmission/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for net-p2p/transmission
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-p2p/transmission/ChangeLog,v 1.211 2012/10/15 13:14:48 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-p2p/transmission/ChangeLog,v 1.212 2012/10/15 14:01:33 ssuominen Exp $
+
+  15 Oct 2012; Samuli Suominen <ssuominen@gentoo.org> transmission-2.61.ebuild,
+  transmission-2.71.ebuild:
+  Pull in >=dev-libs/glib-2 always for glib-gettextize command and eautoreconf
+  wrt #437972
 
   15 Oct 2012; Samuli Suominen <ssuominen@gentoo.org>
   -files/transmission-2.51-fbsd.patch, -transmission-2.52.ebuild,
