--- a/net-irc/hexchat/ChangeLog
+++ b/net-irc/hexchat/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-irc/hexchat
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-irc/hexchat/ChangeLog,v 1.9 2012/10/15 07:14:38 yngwin Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-irc/hexchat/ChangeLog,v 1.10 2012/10/15 14:15:14 yngwin Exp $
+
+*hexchat-2.9.3 (15 Oct 2012)
+
+  15 Oct 2012; Ben de Groot <yngwin@gentoo.org>
+  +files/hexchat-2.9.3-cflags.patch, +hexchat-2.9.3.ebuild:
+  Version bump
 
 *hexchat-2.9.2 (15 Oct 2012)
 
