--- a/profiles/default/bsd/ChangeLog
+++ b/profiles/default/bsd/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for profile directory
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/default/bsd/ChangeLog,v 1.129 2012/10/14 22:29:37 naota Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/default/bsd/ChangeLog,v 1.130 2012/10/15 14:32:17 aballier Exp $
+
+  15 Oct 2012; Alexis Ballier <aballier@gentoo.org> fbsd/packages.build:
+  remove python and perl from packages.build, add autotools, like on linux
 
   14 Oct 2012; <naota@gentoo.org> fbsd/package.use.mask:
   Mask numa on sys-apps/hwloc
