--- a/net-analyzer/ettercap/ChangeLog
+++ b/net-analyzer/ettercap/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-analyzer/ettercap
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/ettercap/ChangeLog,v 1.106 2012/10/15 08:21:13 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/ettercap/ChangeLog,v 1.107 2012/10/15 15:31:05 ago Exp $
+
+*ettercap-0.7.5_p20121015 (15 Oct 2012)
+
+  15 Oct 2012; Agostino Sarubbo <ago@gentoo.org>
+  +ettercap-0.7.5_p20121015.ebuild, -ettercap-0.7.5_pre20121006.ebuild:
+  Add new snapshot, remove pre*
 
   15 Oct 2012; Agostino Sarubbo <ago@gentoo.org> -ettercap-0.7.3-r4.ebuild,
   -ettercap-0.7.4.1-r1.ebuild, -files/ettercap-0.7.3-64bit-casting.patch,
