--- a/sci-libs/io_lib/ChangeLog
+++ b/sci-libs/io_lib/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for sci-libs/io_lib
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-libs/io_lib/ChangeLog,v 1.22 2012/10/15 12:08:51 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-libs/io_lib/ChangeLog,v 1.23 2012/10/15 18:59:14 jlec Exp $
+
+  15 Oct 2012; Justin Lecher <jlec@gentoo.org> -io_lib-1.8.12b-r1.ebuild,
+  -io_lib-1.12.2.ebuild, metadata.xml:
+  Drop old
 
   15 Oct 2012; Agostino Sarubbo <ago@gentoo.org> io_lib-1.10.1.ebuild:
   Stable for amd64, wrt bug #436888
