--- a/sys-kernel/genkernel/ChangeLog
+++ b/sys-kernel/genkernel/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for sys-kernel/genkernel
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/genkernel/ChangeLog,v 1.339 2012/10/15 05:58:18 robbat2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/genkernel/ChangeLog,v 1.340 2012/10/15 21:00:37 robbat2 Exp $
+
+*genkernel-3.4.44.2 (15 Oct 2012)
+
+  15 Oct 2012; Robin H. Johnson <robbat2@gentoo.org> +genkernel-3.4.44.2.ebuild:
+  Version bump.
 
 *genkernel-3.4.44.1 (15 Oct 2012)
 
