--- a/dev-perl/Email-MIME/ChangeLog
+++ b/dev-perl/Email-MIME/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Email-MIME
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Email-MIME/ChangeLog,v 1.64 2012/10/15 10:24:04 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Email-MIME/ChangeLog,v 1.65 2012/10/15 21:21:46 blueness Exp $
+
+  15 Oct 2012; Anthony G. Basile <blueness@gentoo.org>
+  Email-MIME-1.911.0.ebuild:
+  stable ppc, bug #438294
 
   15 Oct 2012; Agostino Sarubbo <ago@gentoo.org> Email-MIME-1.911.0.ebuild:
   Stable for amd64, wrt bug #438294
@@ -255,4 +259,3 @@
   05 Feb 2007; Michael Cummings <mcummings@gentoo.org> +metadata.xml,
   +Email-MIME-1.857.ebuild:
   Dep for Email-MIME-Modifier
-
