--- a/dev-libs/libdbusmenu-qt/ChangeLog
+++ b/dev-libs/libdbusmenu-qt/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-libs/libdbusmenu-qt
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libdbusmenu-qt/ChangeLog,v 1.29 2012/10/15 10:13:07 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libdbusmenu-qt/ChangeLog,v 1.30 2012/10/15 23:30:21 blueness Exp $
+
+  15 Oct 2012; Anthony G. Basile <blueness@gentoo.org>
+  libdbusmenu-qt-0.9.2.ebuild:
+  stable ppc, bug #436706
 
   15 Oct 2012; Agostino Sarubbo <ago@gentoo.org> libdbusmenu-qt-0.9.2.ebuild:
   Stable for X86, wrt bug #436706
