--- a/dev-python/python-exec/ChangeLog
+++ b/dev-python/python-exec/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/python-exec
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/python-exec/ChangeLog,v 1.3 2012/10/16 00:39:23 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/python-exec/ChangeLog,v 1.4 2012/10/16 01:31:32 blueness Exp $
+
+  16 Oct 2012; Anthony G. Basile <blueness@gentoo.org> python-exec-0.1.ebuild:
+  keyword ~arm, bug #438388
 
   16 Oct 2012; Anthony G. Basile <blueness@gentoo.org> python-exec-0.1.ebuild:
   keyworded ~ppc ~ppc64, bug #438388
