--- a/gnome-base/gnome-applets/ChangeLog
+++ b/gnome-base/gnome-applets/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for gnome-base/gnome-applets
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome-applets/ChangeLog,v 1.357 2012/10/07 01:14:12 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome-applets/ChangeLog,v 1.358 2012/10/16 02:04:50 mattst88 Exp $
+
+  16 Oct 2012; Matt Turner <mattst88@gentoo.org>
+  gnome-applets-2.32.1.1-r1.ebuild:
+  Stable on alpha, bug 427544.
 
   07 Oct 2012; Anthony G. Basile <blueness@gentoo.org>
   gnome-applets-2.32.1.1-r1.ebuild:
