--- a/app-office/dia/ChangeLog
+++ b/app-office/dia/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-office/dia
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/dia/ChangeLog,v 1.151 2012/10/07 01:15:28 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/dia/ChangeLog,v 1.152 2012/10/16 02:38:09 mattst88 Exp $
+
+  16 Oct 2012; Matt Turner <mattst88@gentoo.org> dia-0.97.2-r1.ebuild:
+  Stable on alpha, bug 427544.
 
   07 Oct 2012; Anthony G. Basile <blueness@gentoo.org> dia-0.97.2-r1.ebuild:
   stable ppc64, bug #427544
