--- a/app-office/dia/ChangeLog
+++ b/app-office/dia/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-office/dia
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/dia/ChangeLog,v 1.152 2012/10/16 02:38:09 mattst88 Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/dia/ChangeLog,v 1.153 2012/10/16 04:05:02 blueness Exp $
+
+  16 Oct 2012; Anthony G. Basile <blueness@gentoo.org> dia-0.97.2-r1.ebuild:
+  stable ppc, bug #427544
 
   16 Oct 2012; Matt Turner <mattst88@gentoo.org> dia-0.97.2-r1.ebuild:
   Stable on alpha, bug 427544.
