--- a/dev-python/pygobject/ChangeLog
+++ b/dev-python/pygobject/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/pygobject
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pygobject/ChangeLog,v 1.176 2012/10/07 02:08:35 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pygobject/ChangeLog,v 1.177 2012/10/16 04:19:11 blueness Exp $
+
+  16 Oct 2012; Anthony G. Basile <blueness@gentoo.org> pygobject-3.2.2.ebuild:
+  stable ppc, bug #427544
 
   07 Oct 2012; Anthony G. Basile <blueness@gentoo.org>
   pygobject-2.28.6-r52.ebuild:
