--- a/net-libs/farsight2/ChangeLog
+++ b/net-libs/farsight2/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-libs/farsight2
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/farsight2/ChangeLog,v 1.67 2012/10/07 01:53:12 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/farsight2/ChangeLog,v 1.68 2012/10/16 04:43:15 blueness Exp $
+
+  16 Oct 2012; Anthony G. Basile <blueness@gentoo.org> farsight2-0.0.31.ebuild:
+  stable ppc, bug #427544
 
   07 Oct 2012; Anthony G. Basile <blueness@gentoo.org> farsight2-0.0.31.ebuild:
   stable ppc64, bug #427544
