Stable on alpha, bug 427544.
Package-Manager: portage-2.1.11.9/cvs/Linux x86_64

--- a/net-voip/telepathy-gabble/ChangeLog
+++ b/net-voip/telepathy-gabble/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-voip/telepathy-gabble
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-voip/telepathy-gabble/ChangeLog,v 1.103 2012/10/16 04:49:04 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-voip/telepathy-gabble/ChangeLog,v 1.104 2012/10/16 06:42:07 mattst88 Exp $
+
+  16 Oct 2012; Matt Turner <mattst88@gentoo.org> telepathy-gabble-0.16.1.ebuild:
+  Stable on alpha, bug 427544.
 
   16 Oct 2012; Anthony G. Basile <blueness@gentoo.org>
   telepathy-gabble-0.16.1.ebuild:
