--- a/net-voip/telepathy-haze/ChangeLog
+++ b/net-voip/telepathy-haze/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-voip/telepathy-haze
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-voip/telepathy-haze/ChangeLog,v 1.34 2012/10/16 04:49:42 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-voip/telepathy-haze/ChangeLog,v 1.35 2012/10/16 06:41:39 mattst88 Exp $
+
+  16 Oct 2012; Matt Turner <mattst88@gentoo.org> telepathy-haze-0.6.0.ebuild:
+  Stable on alpha, bug 427544.
 
   16 Oct 2012; Anthony G. Basile <blueness@gentoo.org>
   telepathy-haze-0.6.0.ebuild:
