--- a/net-voip/telepathy-salut/ChangeLog
+++ b/net-voip/telepathy-salut/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-voip/telepathy-salut
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-voip/telepathy-salut/ChangeLog,v 1.42 2012/10/16 04:50:21 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-voip/telepathy-salut/ChangeLog,v 1.43 2012/10/16 06:42:33 mattst88 Exp $
+
+  16 Oct 2012; Matt Turner <mattst88@gentoo.org> telepathy-salut-0.8.0.ebuild:
+  Stable on alpha, bug 427544.
 
   16 Oct 2012; Anthony G. Basile <blueness@gentoo.org>
   telepathy-salut-0.8.0.ebuild:
